AC_INIT([pianobar], [0.1], [PromyLOPh@gmail.com])
AC_CONFIG_SRCDIR([src/main.c])
AM_CONFIG_HEADER([src/config.h])
AM_INIT_AUTOMAKE([-Wall])

AC_PROG_CC
AM_PROG_CC_C_O
AM_SANITY_CHECK
AM_PROG_LIBTOOL

PKG_PROG_PKG_CONFIG

PKG_CHECK_MODULES(LIBCURL, libcurl >= 7.18.0)
AC_SUBST(LIBCURL_CFLAGS)
AC_SUBST(LIBCURL_LIBS)

PKG_CHECK_MODULES(LIBXML, libxml-2.0 >= 2.6.31)
AC_SUBST(LIBXML_CFLAGS)
AC_SUBST(LIBXML_LIBS)

PKG_CHECK_MODULES(LIBAO, ao >= 0.8.8)
AC_SUBST(LIBAO_CFLAGS)
AC_SUBST(LIBAO_LIBS)

AC_CHECK_LIB([faad], [NeAACDecOpen], [LIBFAAD_LIBS=-lfaad], AC_MSG_ERROR([libfaad2 is required. See INSTALL]))
AC_SUBST(LIBFAAD_LIBS)

AC_CHECK_LIB([readline], [readline], [LIBREADLINE_LIBS=-lreadline], AC_MSG_ERROR([readline is required. See INSTALL]))
AC_SUBST(LIBREADLINE_LIBS)

# FIXME: check for pthread

AC_CHECK_HEADERS([stdlib.h string.h])

AC_CHECK_FUNCS([memset])

AC_TYPE_SIZE_T

AC_CONFIG_FILES(Makefile src/Makefile)
AC_CONFIG_SUBDIRS([libpiano libwardrobe])

AC_OUTPUT
