# initizalize
AC_PREREQ(2.62)
AC_INIT([pianobar], [0.1], [PromyLOPh@lavabit.com])
AC_CONFIG_SRCDIR([src/main.c])
AM_CONFIG_HEADER([src/config.h])
AM_INIT_AUTOMAKE([-Wall])

# progs
AC_PROG_CC
AM_PROG_CC_C_O
AM_SANITY_CHECK
AM_PROG_LIBTOOL

PKG_PROG_PKG_CONFIG

# libs
PKG_CHECK_MODULES(LIBCURL, libcurl >= 7.18.0)
AC_SUBST(LIBCURL_CFLAGS)
AC_SUBST(LIBCURL_LIBS)

PKG_CHECK_MODULES(LIBXML, libxml-2.0 >= 2.6.31)
AC_SUBST(LIBXML_CFLAGS)
AC_SUBST(LIBXML_LIBS)

PKG_CHECK_MODULES(LIBAO, ao >= 0.8.8)
AC_SUBST(LIBAO_CFLAGS)
AC_SUBST(LIBAO_LIBS)

AC_CHECK_LIB([faad], [NeAACDecOpen], [LIBFAAD_LIBS=-lfaad], AC_MSG_ERROR([libfaad2 is required. See INSTALL]))
AC_SUBST(LIBFAAD_LIBS)

AC_CHECK_LIB([readline], [readline], [LIBREADLINE_LIBS=-lreadline], AC_MSG_ERROR([readline is required. See INSTALL]))
AC_SUBST(LIBREADLINE_LIBS)

AC_CHECK_LIB([m], [pow], [LIBM_LIBS=-lm], AC_MSG_ERROR([libm is required.]))
AC_SUBST(LIBM_LIBS)

AC_CHECK_LIB([pthread], [pthread_create], [LIBPTHREAD_LIBS=-lpthread], AC_MSG_ERROR([libpthread is required.]))
AC_SUBST(LIBPTHREAD_LIBS)

# headers
AC_CHECK_HEADERS([stdlib.h string.h stdint.h termios.h unistd.h])

# libc funcs
AC_CHECK_FUNCS([memset memmove strcasecmp])

# compiler characteristics
AC_C_INLINE
AC_TYPE_SIZE_T

# output
AC_CONFIG_FILES(Makefile src/Makefile)
AC_CONFIG_SUBDIRS([libpiano libwardrobe])

AC_OUTPUT
