# init
AC_PREREQ(2.62)
AC_INIT([libpiano], [0.1], [PromyLOPh@lavabit.com])
AC_CONFIG_AUX_DIR([.])
AC_CONFIG_SRCDIR([src/main.c])
AM_CONFIG_HEADER([src/config.h])
AM_INIT_AUTOMAKE([-Wall])

# progs
AC_PROG_CC
AM_PROG_CC_C_O
AM_SANITY_CHECK
AM_PROG_LIBTOOL

PKG_PROG_PKG_CONFIG

# libs
PKG_CHECK_MODULES(LIBCURL, libcurl >= 7.18.0)
AC_SUBST(LIBCURL_CFLAGS)
AC_SUBST(LIBCURL_LIBS)

PKG_CHECK_MODULES(LIBXML, libxml-2.0 >= 2.6.31)
AC_SUBST(LIBXML_CFLAGS)
AC_SUBST(LIBXML_LIBS)

# headers
AC_CHECK_HEADERS([stdlib.h string.h])

# libc functions
AC_FUNC_REALLOC
AC_CHECK_FUNCS([memset strchr strdup])

# output
AC_CONFIG_FILES(Makefile src/Makefile)

AC_OUTPUT
